--- a/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/2.system-variable-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/2.system-variable-overview-of-mysql-mode.md
@@ -77,7 +77,7 @@
 |                                       变量名                                        |                   功能描述                    |
 |----------------------------------------------------------------------------------|-------------------------------------------|
 | [version_comment](136.version_comment-of-mysql-mode.md)                   | 用于查看 OBServer 节点的版本信息。                      |
-| [version](135.version-variable-of-mysql-mode.md.md)                           | 用于查看服务器的版本号。                              |
+| [version](135.version-variable-of-mysql-mode.md) | 用于查看服务器的版本号。                              |
 | [ob_last_schema_version](79.ob_last_schema_version-of-mysql-mode.md)            | 用于设置该 session 中最新使用的 Schema 版本号。          |
 | [ob_proxy_global_variables_version](87.ob_proxy_global_variables_version-of-mysql-mode.md) | 用于设置 OBServer 节点返回给 OBproxy 所需的全局变量的最新版本信息。 |
 
