--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
@@ -45,7 +45,7 @@
 
 * 发起了 3 次数据备份，有效数据备份分别为 `full_backup_set_1`、 `full_backup_set_2`、`inc_backup_set_3`。
 
-物理恢复的可恢复区间如下图所示。其中，数据备份的右边界均为 `MIN_RESTORE_SCN`（例如，数据备份 `full_backup_set_1` 的 `MIN_RESTORE_SCN` 对应图中的 `scn 300`）；日志归档的右边界均为 `CEHCKPOINT_SCN`（例如，日志备份 `round 1` 的 `CEHCKPOINT_SCN` 对应图中的 `scn 500`）。
+物理恢复的可恢复区间如下图所示。其中，数据备份的右边界均为 `MIN_RESTORE_SCN`（例如，数据备份 `full_backup_set_1` 的 `MIN_RESTORE_SCN` 对应图中的 `scn 300`）；日志归档的右边界均为 `CHECKPOINT_SCN`（例如，日志备份 `round 1` 的 `CHECKPOINT_SCN` 对应图中的 `scn 500`）。
 
 ![可恢复区间](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/backup-and-restore/restore-window.jpg)
 
@@ -78,7 +78,7 @@ obclient [(none)]> ALTER SYSTEM SET ha_high_thread_score =10 TENANT = mysql;
 * 回放到日志到指定的 scn，且包含该 scn 位点。
 
   ```sql
-  ALTER SYSTEM RECOVER STANDBY [TENANT tenant_name] UNTIL SCN= scn;
+  ALTER SYSTEM RECOVER STANDBY [TENANT tenant_name] UNTIL SCN=scn;
   ```
 
 * 无终点，持续回放归档源端日志。
