--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/14.delete-resource-pool.md
@@ -10,7 +10,7 @@
 
 * 当租户只有一个资源池时，不支持直接移除。
 
-  * 先新建资源池，分配给该租户，再通过修改资源池配置释放需要删除的资源池。新建资源池操作，参见 [新建资源池](2.create-tenant.md)。
+  * 先新建资源池，分配给该租户，再通过修改资源池配置释放需要删除的资源池。新建资源池操作，参见 [新建资源池](2.manage-create-tenant.md)。
   * 如果租户已不再使用，也可以先删除租户后，再删除资源池。详细操作，参见 [删除租户](12.delete-tenant.md)。
 
 ## 操作步骤
@@ -63,7 +63,7 @@
 
 ## 相关文档
 
-* [新建资源池](2.create-tenant.md)
+* [新建资源池](2.manage-create-tenant.md)
 
 * [修改租户属性](10.modify-tenant-properties.md)
 
