fix doc for obproxy deployment

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -194,7 +194,7 @@ spec:
             - name: OB_CLUSTER
               value: ob-test
             - name: RS_LIST
-              value: $(SVC_OB_TEST_SERVICE_HOST):$(SVC_OB_TEST_SERVICE_PORT)
+              value: $RS_LIST
           resources:
             limits:
               memory: 2Gi
@@ -226,7 +226,7 @@ spec:
 
 - `APP_NAME`: OBProxy 的 appname。
 - `OB_CLUSTER`: OBProxy 连接的 OceanBase 集群名。
-- `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT` 来配置，环境变量的名字和 OceanBase 的集群名有关, 其中 `OB_TEST` 部分是 OceanBase 集群名, 需要转换成大写和下划线。
+- `RS_LIST`: OceanBase 集群的 rs_list, 格式为 `${ip1}:${port1};${ip2}:${port2};${ip3}:${port3}` 需要根据实际部署情况来进行替换，rs_list 的地址可以通过连接到 OceanBase 集群中通过 `show parameters like 'rootservice_list'` 进行查看，或者通过 `kubectl get RootService rs-${cluster_name} -n ${namespace} -o yaml` 命令查询出所有 rootservice 地址之后拼接成完整的 rs_list， 其中 `${cluster_name}` 和 `${namespace}` 需要替换成部署的 OceanBase 集群名和 namespace。
 - `service`: service 配置中会开放两个端口，一个用来作 sql 连接的端口，一个是监控数据的采集端口。
 
 配置文件修改之后可以通过以下命令进行部署:
