fix ip&Irregular words

--- a/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/2.stop-cleaning-backup-data.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/2.stop-cleaning-backup-data.md
@@ -177,7 +177,7 @@
 
    2. 查看清理任务的历史记录。
 
-      系统租户通过 `oceanbase.CDB_OB_BACKUP_DELETE_JOB_HISTORY` 视图查看所有租户的历史清理任务；Mysql 模式下用户租户通过 `oceanbase.DBA_OB_BACKUP_DELETE_JOB_HISTORY` 视图，Oracle 模式下用户租户通过 `sys.DBA_OB_BACKUP_DELETE_JOB_HISTORY` 视图查看所在租户的历史清理任务。
+      系统租户通过 `oceanbase.CDB_OB_BACKUP_DELETE_JOB_HISTORY` 视图查看所有租户的历史清理任务；MySQL 模式下用户租户通过 `oceanbase.DBA_OB_BACKUP_DELETE_JOB_HISTORY` 视图，Oracle 模式下用户租户通过 `sys.DBA_OB_BACKUP_DELETE_JOB_HISTORY` 视图查看所在租户的历史清理任务。
 
       系统租户查看指定租户清理任务的历史记录的示例如下：
 
