--- a/zh-CN/6.manage/7.monitor/2.monitor-items-introduction/1.system-monitor/2.monitor-items.md
+++ b/zh-CN/6.manage/7.monitor/2.monitor-items-introduction/1.system-monitor/2.monitor-items.md
@@ -222,16 +222,16 @@ from GV$OB_KVCACHE, DBA_OB_TENANTS where DBA_OB_TENANTS.tenant_type!='META' and 
 +-----------+----------------+------------+----------+-----------------------+------------+
 | tenant_id | tenant_name    | svr_ip     | svr_port | cache_name            | cache_size |
 +-----------+----------------+------------+----------+-----------------------+------------+
-|         1 | sys            | 6.0.132.81 |     2882 | schema_cache          |   14564352 |
-|         1 | sys            | 6.0.132.81 |     2882 | tablet_table_cache    |    6241280 |
-|         1 | sys            | 6.0.132.81 |     2882 | vtable_cache          |   35372032 |
-|         1 | sys            | 6.0.132.81 |     2882 | opt_column_stat_cache |    6241280 |
-|      1008 | mq_t1          | 6.0.132.81 |     2882 | index_block_cache     |    6241280 |
-|      1008 | mq_t1          | 6.0.132.81 |     2882 | user_block_cache      |   10402816 |
-|      1008 | mq_t1          | 6.0.132.81 |     2882 | user_row_cache        |    6241280 |
-|      1010 | oracle_tenant1 | 6.0.132.81 |     2882 | index_block_cache     |    6241280 |
-|      1008 | mq_t1          | 6.0.132.81 |     2882 | bf_cache              |    4160512 |
-|      1010 | oracle_tenant1 | 6.0.132.81 |     2882 | user_block_cache      |    8322048 |
+|         1 | sys            |xx.xx.xx.xx |     2882 | schema_cache          |   14564352 |
+|         1 | sys            |xx.xx.xx.xx |     2882 | tablet_table_cache    |    6241280 |
+|         1 | sys            |xx.xx.xx.xx |     2882 | vtable_cache          |   35372032 |
+|         1 | sys            |xx.xx.xx.xx |     2882 | opt_column_stat_cache |    6241280 |
+|      1008 | mq_t1          |xx.xx.xx.xx |     2882 | index_block_cache     |    6241280 |
+|      1008 | mq_t1          |xx.xx.xx.xx |     2882 | user_block_cache      |   10402816 |
+|      1008 | mq_t1          |xx.xx.xx.xx |     2882 | user_row_cache        |    6241280 |
+|      1010 | oracle_tenant1 |xx.xx.xx.xx |     2882 | index_block_cache     |    6241280 |
+|      1008 | mq_t1          |xx.xx.xx.xx |     2882 | bf_cache              |    4160512 |
+|      1010 | oracle_tenant1 |xx.xx.xx.xx |     2882 | user_block_cache      |    8322048 |
 +-----------+----------------+------------+----------+-----------------------+------------+
 10 rows in set (0.06 sec)
 ```
@@ -316,11 +316,11 @@ obclient> select distinct class,stat_id,name,VALUE_TYPE from gv$sysstat where cl
     obclient> select TENANT,SVR_IP,SVR_PORT,USER,HOST,COMMAND,STATE,INFO,SQL_ID,TRACE_ID 
     from GV$OB_PROCESSLIST 
     where STATE='ACTIVE' or null limit 10;
-    +--------+------------+----------+-----------+-----------------+---------+--------+-----------------------------------------------------------------------------------------------------------------------------------------+----------------------------------+-----------------------------------+
-    | TENANT | SVR_IP     | SVR_PORT | USER      | HOST            | COMMAND | STATE  | INFO                                                                                                                                    | SQL_ID                           | TRACE_ID                          |
-    +--------+------------+----------+-----------+-----------------+---------+--------+-----------------------------------------------------------------------------------------------------------------------------------------+----------------------------------+-----------------------------------+
-    | sys    | 6.0.132.81 |     2882 | DBA_query | 6.0.12.88:51588 | Query   | ACTIVE | select TENANT,SVR_IP,SVR_PORT,USER,HOST,COMMAND,STATE,INFO,SQL_ID,TRACE_ID from GV$OB_PROCESSLIST where STATE='ACTIVE' or null limit 10 | D18F6AE855AD0D7478162DD8EF48C781 | YB4206008451-0005F55893CEA363-0-0 |
-    +--------+------------+----------+-----------+-----------------+---------+--------+-----------------------------------------------------------------------------------------------------------------------------------------+----------------------------------+-----------------------------------+
+    +--------+------------+----------+-----------+-------------------+---------+--------+-----------------------------------------------------------------------------------------------------------------------------------------+----------------------------------+-----------------------------------+
+    | TENANT | SVR_IP     | SVR_PORT | USER      | HOST              | COMMAND | STATE  | INFO                                                                                                                                    | SQL_ID                           | TRACE_ID                          |
+    +--------+------------+----------+-----------+-------------------+---------+--------+-----------------------------------------------------------------------------------------------------------------------------------------+----------------------------------+-----------------------------------+
+    | sys    |xx.xx.xx.xx |     2882 | DBA_query | xx.xx.xx.xx:51588 | Query   | ACTIVE | select TENANT,SVR_IP,SVR_PORT,USER,HOST,COMMAND,STATE,INFO,SQL_ID,TRACE_ID from GV$OB_PROCESSLIST where STATE='ACTIVE' or null limit 10 | D18F6AE855AD0D7478162DD8EF48C781 | YB4206008451-0005F55893CEA363-0-0 |
+    +--------+------------+----------+-----------+-------------------+---------+--------+-----------------------------------------------------------------------------------------------------------------------------------------+----------------------------------+-----------------------------------+
     1 row in set (0.04 sec)
     ```
 
@@ -347,12 +347,12 @@ obclient> select distinct class,stat_id,name,VALUE_TYPE from gv$sysstat where cl
     +-----------+-----------------+-------------+------+
     | tenant_id | tenant_name     | svr_ip      | cnt  |
     +-----------+-----------------+-------------+------+
-    |         1 | sys             | 6.3.27.47   |    0 |
-    |         1 | sys             | 6.1.59.106  |    0 |
-    |         1 | sys             | 6.1.46.43   |    0 |
-    |      1002 | midas0_3790     | 6.1.59.106  |    0 |
-    |      1002 | midas0_3790     | 6.1.46.43   |    0 |
-    |      1002 | midas0_3790     | 6.1.156.158 |    0 |
+    |         1 | sys             | xx.xx.xx.xx |    0 |
+    |         1 | sys             | xx.xx.xx.xx |   0  |
+    |         1 | sys             | xx.xx.xx.xx |   0  |
+    |      1002 | midas0_3790     | xx.xx.xx.xx |    0 |
+    |      1002 | midas0_3790     | xx.xx.xx.xx |   0  |
+    |      1002 | midas0_3790     | xx.xx.xx.xx |   0  |
     +-----------+-----------------+-------------+------+
     6 rows in set (0.05 sec)
     ```
