--- a/zh-CN/6.manage/7.monitor/2.monitor-items-introduction/1.system-monitor/3.wait-events.md
+++ b/zh-CN/6.manage/7.monitor/2.monitor-items-introduction/1.system-monitor/3.wait-events.md
@@ -90,7 +90,7 @@ obclient> select * from GV$SESSION_WAIT where  STATE='WAITING' limit 1\G
 *************************** 1. row ***************************
                        SID: 3222786366
                     CON_ID: 1
-                    SVR_IP: 6.3.27.47
+                    SVR_IP: xx.xx.xx.xx
                   SVR_PORT: 2882
                      EVENT: px loop condition wait
                     P1TEXT: address
