--- a/zh-CN/6.manage/7.monitor/2.monitor-items-introduction/3.sql-monitor/3.execution-plan.md
+++ b/zh-CN/6.manage/7.monitor/2.monitor-items-introduction/3.sql-monitor/3.execution-plan.md
@@ -31,13 +31,13 @@ Plan Cache 相关视图包含 Plan Cache 的统计信息、执行统计的统计
 例如，如下语句展示了一个执行计划：
 
 ```shell
-obclient> select * from GV$OB_PLAN_CACHE_PLAN_EXPLAIN where tenant_id=1 and svr_ip='6.1.156.158' and svr_port=2882 and plan_id=349;
+obclient> select * from GV$OB_PLAN_CACHE_PLAN_EXPLAIN where tenant_id=1 and svr_ip='xx.xx.xx.xx' and svr_port=2882 and plan_id=349;
 +-----------+-------------+----------+---------+------------+--------------+----------------------+--------------+------+------+---------------------------------------------------------------------------------------------------------------------------------------------------------+
 | TENANT_ID | SVR_IP      | SVR_PORT | PLAN_ID | PLAN_DEPTH | PLAN_LINE_ID | OPERATOR             | NAME         | ROWS | COST | PROPERTY                                                                                                                                                |
 +-----------+-------------+----------+---------+------------+--------------+----------------------+--------------+------+------+---------------------------------------------------------------------------------------------------------------------------------------------------------+
-|         1 | 6.1.156.158 |     2882 |     349 |          0 |            0 | PHY_DIRECT_RECEIVE   | NULL         |    1 |    6 | NULL                                                                                                                                                    |
-|         1 | 6.1.156.158 |     2882 |     349 |          1 |            1 |  PHY_DIRECT_TRANSMIT | NULL         |    1 |    5 | NULL                                                                                                                                                    |
-|         1 | 6.1.156.158 |     2882 |     349 |          2 |            2 |   PHY_TABLE_SCAN     | __all_server |    1 |    2 | table_rows:6, physical_range_rows:1, logical_range_rows:1, index_back_rows:0, output_rows:1, est_method:default_stat, avaiable_index_name[__all_server] |
+|         1 | xx.xx.xx.xx |     2882 |     349 |          0 |            0 | PHY_DIRECT_RECEIVE   | NULL         |    1 |    6 | NULL                                                                                                                                                    |
+|         1 | xx.xx.xx.xx |     2882 |     349 |          1 |            1 |  PHY_DIRECT_TRANSMIT | NULL         |    1 |    5 | NULL                                                                                                                                                    |
+|         1 | xx.xx.xx.xx |     2882 |     349 |          2 |            2 |   PHY_TABLE_SCAN     | __all_server |    1 |    2 | table_rows:6, physical_range_rows:1, logical_range_rows:1, index_back_rows:0, output_rows:1, est_method:default_stat, avaiable_index_name[__all_server] |
 +-----------+-------------+----------+---------+------------+--------------+----------------------+--------------+------+------+---------------------------------------------------------------------------------------------------------------------------------------------------------+
 3 rows in set (0.04 sec)
 ```
