--- a/zh-CN/7.reference/3.performance-tuning-guide/3.system-tuning/2.database-parameter-tuning/3.memory-related-parameters.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/3.system-tuning/2.database-parameter-tuning/3.memory-related-parameters.md
@@ -4,7 +4,7 @@
 |----------------------------------------|-----------------------------|---------------------------------------------------------------------------------------------------------------------------------|
 | memory_chunk_cache_size                | Observer cache 2 M 内存块的大小   | 默认值为 0，建议保持默认值                                                                                                                  |
 | memory_limit_percentage                | OceanBase 数据库占系统总内存的比例      | 提高 OceanBase 数据库可用的内存量                                                                                                          |
-| memstore_limit_percentage              | memstore 占租户的内存比，本内存不独占     | 尽量增大 Memstore 的空间。如果过大可能会存在写入过大的场景，即存在由于转储速度跟不上写入速度导致内存超限的风险                                                                    |
+| memstore_limit_percentage              | memstore 占租户的内存比，本内存不独占     | 尽量增大 MemStore 的空间。如果过大可能会存在写入过大的场景，即存在由于转储速度跟不上写入速度导致内存超限的风险                                                                    |
 | freeze_trigger_percentage              | 触发转储的时机                     | 对于写入压力比较大的系统，建议可以调整到 30\~50，实现尽快触发转储，以防止内存不足。触发转储会带来额外的 CPU 和 I/O 开销，且频繁触发转储后，mini sstable 的个数会增加，增加了查询路径，对性能产生一定影响，此参数从 OceanBase 数据库 V4.0 版本开始改为租户级配置项。                 |
 | system_memory                          | 500 租户预留内存大小                | 建议保持默认值                                                                                                                         |
 | use_large_pages                        | 开启内存大页                      | 需要在 OS 端开启内存大页功能，此功能才会生效，开启后可以提高内存页表的查询效率                                                                                       |
