--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/7.exception-handling.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/7.exception-handling.md
@@ -233,7 +233,7 @@ try {
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>Mysql 模式推荐使用 mysql 原生 jdbc driver。</p>
+    <p>MySQL 模式推荐使用 MySQL 原生 jdbc driver。</p>
   </main>
 
 这里仅以 OceanBase JDBC 驱动为示例。其他更多的不同的驱动对异常的处理方式请从对应的驱动官网进行学习。
