--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/67.v-sql_audit-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/67.v-sql_audit-of-oracle-mode.md
@@ -82,7 +82,7 @@ V$OB_SQL_AUDIT
 | RETRY_CNT               | NUMBER(38)      | NO             | 重试次数                                                                                                                                                                                                                                                                                                                                                                                                                          |
 | TABLE_SCAN              | NUMBER(38)      | NO             | 判断该请求是否含全表扫描                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | CONSISTENCY_LEVEL       | NUMBER(38)      | NO             | 一致性级别                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| MEMSTORE_READ_ROW_COUNT | NUMBER(38)      | NO             | Memstore 中的读行数                                                                                                                                                                                                                                                                                                                                                                                                                |
+| MEMSTORE_READ_ROW_COUNT | NUMBER(38)      | NO             | MemStore 中的读行数                                                                                                                                                                                                                                                                                                                                                                                                                |
 | SSSTORE_READ_ROW_COUNT  | NUMBER(38)      | NO             | Ssstore 中连读的行数                                                                                                                                                                                                                                                                                                                                                                                                                |
 | REQUEST_MEMORY_USED     | NUMBER(38)      | NO             | 该请求消耗的内存                                                                                                                                                                                                                                                                                                                                                                                                                      |
 | EXPECT_WORKER_COUNT     | NUMBER(38)      | NO             | 请求期望的工作线程数                                                                                                                                                                                                                                                                                                                                                                                                                    |
