--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/48.v-ob_tablet_compaction_progress-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/48.v-ob_tablet_compaction_progress-of-oracle-mode.md
@@ -16,7 +16,7 @@ V$OB_TABLET_COMPACTION_PROGRESS
 | SVR_IP                       | VARCHAR2(46)                      | NO         | 服务器 IP 地址                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | SVR_PORT                     | NUMBER(38)                        | NO         | 服务器端口号                                                                                                                                                                                                                                                                                                                                                                                                                               |
 | TENANT_ID                    | NUMBER(38)                        | NO         | 租户 ID                                                                                                                                                                                                                                                                                                                                                                                                                                |
-| TYPE                         | VARCHAR2(64)                      | NO         | compaction 的类型 <li> `MINI` ：转储/L0 compaction，Memtable 通过转储变成 SSTable   <li> `MAJOR` ：合并   <li> `MINI MINOR` ：L1 compaction，多个 Mini SSTable 合成一个   <li> `BUF MINOR` ：生成特殊的 buf minor sstable 的 compaction    |
+| TYPE                         | VARCHAR2(64)                      | NO         | compaction 的类型 <li> `MINI` ：转储/L0 compaction，MemTable 通过转储变成 SSTable   <li> `MAJOR` ：合并   <li> `MINI MINOR` ：L1 compaction，多个 Mini SSTable 合成一个   <li> `BUF MINOR` ：生成特殊的 buf minor sstable 的 compaction    |
 | LS_ID                        | NUMBER(38)                        | NO         | 日志流 ID                                                                                                                                                                                                                                                                                                                                                                                                                               |
 | TABLET_ID                    | NUMBER(38)                        | NO         | 数据分片 ID                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | COMPACTION_SCN                      | NUMBER(38)                        | NO         | 合并版本信息                                                                                                                                                                                                                                                                                                                                                                                                                               |
