--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/9.gv-ob_tablet_compaction_history-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/9.gv-ob_tablet_compaction_history-of-oracle-mode.md
@@ -18,7 +18,7 @@ GV$OB_TABLET_COMPACTION_HISTORY
 | TENANT_ID                            | NUMBER(38)    | NO         | 租户 ID                                                                                                                                                                                                                                                                                                                                                                                                                                |
 | LS_ID                                | NUMBER(38)    | NO         | 日志流 ID                                                                                                                                                                                                                                                                                                                                                                                                                               |
 | TABLET_ID                            | NUMBER(38)    | NO         | 数据分片 ID                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| TYPE                                 | VARCHAR2(64)  | NO         | compaction 的类型 <li> `MINI` ：转储/L0 compaction，Memtable 通过转储变成 SSTable   <li> `MAJOR` ：合并   <li> `MINI MINOR` ：L1 compaction，多个 Mini SSTable 合成一个   <li> `BUF MINOR` ：生成特殊的 buf minor sstable 的 compaction    |
+| TYPE                                 | VARCHAR2(64)  | NO         | compaction 的类型 <li> `MINI` ：转储/L0 compaction，MemTable 通过转储变成 SSTable   <li> `MAJOR` ：合并   <li> `MINI MINOR` ：L1 compaction，多个 Mini SSTable 合成一个   <li> `BUF MINOR` ：生成特殊的 buf minor sstable 的 compaction    |
 | COMPACTION_SCN                              | NUMBER(38)    | NO         | 合并版本：minor 为 snapshot_version                                                                                                                                                                                                                                                                                                                                                                                                        |
 | START_TIME                           | NUMBER(38)    | NO         | 开始时间                                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | FINISH_TIME                          | NUMBER(38)    | NO         | 结束时间                                                                                                                                                                                                                                                                                                                                                                                                                                 |
