--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -27,7 +27,7 @@
 
 * OCP Express
   
-  基于 Web 的 OceanBase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。详细信息请参考 [OceanBase 云平台 Express (OCP Express)](https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001692855)。
+  基于 Web 的 OceanBase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。详细信息请参考 [OceanBase 云平台 Express (OCP Express)](../../../7.reference/6.oceanbase-tools/4.1.ocp-express.md)。
   
 ## 前提条件
 
