--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase-for-community.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase-for-community.md
@@ -6,7 +6,7 @@
   <h4>注意</h4>
   <ul>
   <li>
-  <p>本文中的方法仅适用于 OceanBase 数据库快速上手体验，不适用生产环境，如需在生产环境中部署 OceanBase 数据库，请参考 OceanBase 数据库文档中 <a href="../../4.deploy/1.deploy-overview.md">部署数据库</a> 章节。</p>
+  <p>本文中的方法仅适用于 OceanBase 数据库快速上手体验，不适用生产环境，如需在生产环境中部署 OceanBase 数据库，请参考 OceanBase 数据库文档中 <a href="../4.deploy/1.deploy-overview.md">部署数据库</a> 章节。</p>
   </li>
   <li>
   <p>本文提供的三种方案中，<b>部署演示环境</b> 和 <b>部署集群环境</b> 同时适用于企业版和社区版部署；<b>部署容器环境</b> 仅适用于社区版部署。</p>
