--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc.md
@@ -94,4 +94,4 @@
 
 ## 后续操作
 
-ODC 创建完成后的验证信息，请参见 [ODC 部署后检查](3.post-deployment-check.md)。
+ODC 创建完成后的验证信息，请参见 [ODC 部署后检查](3.post-deployment-check-odc-graphical.md)。
