--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/3.start-deployment.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/3.start-deployment.md
@@ -73,4 +73,4 @@ bash install.sh -c 5 -i 5-
 
 ## 后续操作
 
-OCP 部署完成后的验证信息，请参见 [OCP 部署后检查](4.post-deployment-check.md)。
+OCP 部署完成后的验证信息，请参见 [OCP 部署后检查](4.post-deployment-check-ocp-command-line.md)。
