--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md
@@ -192,7 +192,7 @@ Query OK, 0 rows affected
 
 ## 相关文档
 
-* [租户创建后验证](3.verify-after-deployment.md)
+* [租户创建后验证](3.verify-after-deployment-tenant-command-line.md)
 * [CREATE RESOURCE UNIT](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)
 * [CREATE RESOURCE POOL](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/6.create-resource-pool.md)
 * [CREATE TENANT](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)
