--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
@@ -113,4 +113,4 @@
 
 ## 后续操作
 
-OAT 部署完成后的验证信息，请参见 [OAT 部署后验证](2.verify-after-deployment.md)。
+OAT 部署完成后的验证信息，请参见 [OAT 部署后验证](2.verify-after-deployment-oat-graphical.md)。
