--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/2.deploy-ocp.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/2.deploy-ocp.md
@@ -81,7 +81,7 @@
 
 ## 后续操作
 
-OCP 部署完成后的验证信息，请参见 [OCP 部署后检查](3.post-deployment-check.md)。
+OCP 部署完成后的验证信息，请参见 [OCP 部署后检查](3.post-deployment-check-ocp-graphical.md)。
 
 ## 相关文档
 
