--- a/zh-CN/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
+++ b/zh-CN/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
@@ -16,7 +16,7 @@
 INSERT /*+ append enable_parallel_dml parallel(N) */ INTO  table_name select_sentence
 ```
 
-更多 `INSERT INTO` 语法的信息，请参见 [INSERT（MySQL 模式）](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-of-mysql-mode.md) 和 [INSERT（Oracle 模式）](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md)。
+更多 `INSERT INTO` 语法的信息，请参见 [INSERT（MySQL 模式）](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) 和 [INSERT（Oracle 模式）](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md)。
 
 **参数解释：**
 
