--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/2.optimize-sql-statements.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/2.optimize-sql-statements.md
@@ -13,5 +13,5 @@
 3. 收集 SQL 中涉及到的表、列、谓词等对象的统计信息。统计信息是代价模型中选取最优执行计划的关键，优化器可以利用统计信息来优化计划的选择策略。请参见 [收集统计信息](4.optimizer-statistics/1.statistics-overview.md)。
 
 4. 找到具体的慢 SQL，为了使某些 SQL 的执行时间或资源消耗符合预期，常见的优化方式如下：
-   * 对 SQL 做等价改写生成最佳执行计划，详细信息请参见 [查询改写](5.query-rewrite/1.overview.md)。
-   * 针对多表访问的 SQL，还需要关注多表间的联接问题，通过优化访问路径、联接顺序和联接算法等实现查询优化。详细信息请参见 [访问路径](6.query-optimization/1.access-path/1.overview.md)、[联接算法](6.query-optimization/2.join-algorithm/2.join-algorithm.md) 和 [联接顺序](6.query-optimization/2.join-algorithm/3.join-order.md)。
+   * 对 SQL 做等价改写生成最佳执行计划，详细信息请参见 [查询改写](5.query-rewrite/1.query-rewrite-overview.md)。
+   * 针对多表访问的 SQL，还需要关注多表间的联接问题，通过优化访问路径、联接顺序和联接算法等实现查询优化。详细信息请参见 [访问路径](6.query-optimization/1.access-path/1.access-path-overview.md)、[联接算法](6.query-optimization/2.join-algorithm/2.join-algorithm.md) 和 [联接顺序](6.query-optimization/2.join-algorithm/3.join-order.md)。
