--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/127.dbms-random-oracle/1.dbms-random-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/127.dbms-random-oracle/1.dbms-random-overview-oracle.md
@@ -35,7 +35,7 @@ DBMS_RANDOM 子程序概览
 
 |                     **子程序**              |                       **描述**                 |
 |--------------------------------------|---------------------------------------------------|
-| [INITIALIZE](2.initialize-oracle.md) | 使用种子值进行包的初始化。     |
+| [INITIALIZE](2.initialize-random-oracle.md) | 使用种子值进行包的初始化。     |
 | [NORMAL](3.normal-oracle.md)     | 返回正态分布的随机码。  |
 | [RANDOM](4.random-oracle.md)     | 生成一个随机数。 |
 | [SEED](5.seed-oracle.md)       | 重置种子。   |
