--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/261.utl-file-oracle/1.utl-file-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/261.utl-file-oracle/1.utl-file-overview-oracle.md
@@ -78,9 +78,9 @@ UTL_FILE 异常情况
 | [FREMOVE](6.fremove-oracle.md)  | 删除磁盘文件（需要相应的删除权限），类似UNIX `rm` 命令。 |
 | [FRENAME](7.frename-oracle.md)  | 将现有文件重命名为新名称，类似于 UNIX `mv` 命令。    |
 | [FSEEK](8.fseek-oracle.md)    | 按指定的字节数向前或向后调整文件位置。               |
-| [NEW_LINE](9.new-line-oracle.md) | 将一个或多个操作系统指定的行终止符写入文件。            |
-| [GET_LINE](10.get-line-oracle.md) | 读取一行文本。                           |
-| [PUT](11.put-oracle.md)      | 将字符串写入文件。                         |
-| [PUT_LINE](12.put-line-oracle.md) | 将一行写入文件，并附加操作系统指定的行终止符。           |
+| [NEW_LINE](9.new-line-utl-oracle.md) | 将一个或多个操作系统指定的行终止符写入文件。            |
+| [GET_LINE](10.get-line-utl-oracle.md) | 读取一行文本。                           |
+| [PUT](11.put-utl-oracle.md)      | 将字符串写入文件。                         |
+| [PUT_LINE](12.put-utl-line-oracle.md) | 将一行写入文件，并附加操作系统指定的行终止符。           |
 
 
