--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/1.dbms-debug-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/1.dbms-debug-overview-oracle.md
@@ -75,7 +75,7 @@ DBMS_DEBUG 子程序概览
 | [GET_VALUES](11.get-values-oracle.md)            | 返回当前栈帧的所有变量信息。          |
 | [GET_RUNTIME_INFO](12.get-runtime-info-oracle.md)      | 返回当前程序的有关信息。            |
 | [GET_TIMEOUT_BEHAVIOUR](13.get-timeout-behaviour-oracle.md) | 返回当前超时行为。               |
-| [INITIALIZE](14.initialize-oracle.md)            | 在目标会话中设置 DebugID。       |
+| [INITIALIZE](14.initialize-debug-oracle.md)            | 在目标会话中设置 DebugID。       |
 | [PROBE_VERSION](15.probe-version-oracle.md)         | 返回服务器上 DBMS_DEBUG 的版本号。 |
 | [PRINT_BACKTRACE](16.print-backtrace-oracle.md)       | 打印堆栈回溯。                 |
 | [SET_TIMEOUT](17.set-timeout-oracle.md)           | 设置超时值。                  |
