--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/5.related-terms.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/5.related-terms.md
@@ -18,11 +18,11 @@
 
 **访问路径**
 
-访问某张表时使用的访问方式，包括主表访问和二级索引访问两类。具体参见 [访问路径](4.sql-optimization/6.query-optimization/1.access-path/1.overview.md)。
+访问某张表时使用的访问方式，包括主表访问和二级索引访问两类。具体参见 [访问路径](../5.sql-optimization/4.sql-optimization/6.query-optimization/1.access-path/1.access-path-overview.md)。
 
 **联接顺序**
 
-多表联接时各表之间的联接顺序，目前 OceanBase 数据库仅支持左深树的联接顺序。具体参见 [联接顺序](4.sql-optimization/6.query-optimization/2.join-algorithm/3.join-order.md)。
+多表联接时各表之间的联接顺序，目前 OceanBase 数据库仅支持左深树的联接顺序。具体参见 [联接顺序](../5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.join-order.md)。
 
 **联接算法**
 
