--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/3.aggregate-function-of-mysql-mode/14.srddev-samp-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/3.aggregate-function-of-mysql-mode/14.srddev-samp-of-mysql-mode.md
@@ -8,7 +8,7 @@ STDDEV_SAMP(expr)
 
 ## 说明
 
-返回 `expr` 的样本标准差，该函数返回 `VAR_SAMP()` 函数结果的平方根。有关 `VAR_SAMP()` 函数的详细信息，请参见 [VAR_SAMP](../3.aggregate-function-of-mysql-mode/17.var-samp-of-mysql-mode.md)。
+返回 `expr` 的样本标准差，该函数返回 `VAR_SAMP()` 函数结果的平方根。有关 `VAR_SAMP()` 函数的详细信息，请参见 [VAR_SAMP](../3.aggregate-function-of-mysql-mode/17.var-samp-agg-of-mysql-mode.md)。
 
 如果没有匹配到行，则该函数返回 `NULL`。
 
