修改 2.oceanbase-loader-dumper.md

--- a/zh-CN/7.reference/7.command-line-tools/2.oceanbase-loader-dumper.md
+++ b/zh-CN/7.reference/7.command-line-tools/2.oceanbase-loader-dumper.md
@@ -2,7 +2,10 @@
 
 ## 什么是 OBLOADER 
 
-OBLOADER 是一款使用 Java 开发的客户端导入工具。该工具提供了非常灵活的命令行选项，可在多种复杂的场景下，将数据库对象定义和表数据导入到 OceanBase 中。推荐 OBLOADER 与 OBDUMPER 搭配使用，但是在外部业务中，OBLOADER 同时支持如 Navicat、Mydumper 和 SQLDeveloper 等工具导出的 CSV 格式的文件导入。OBLOADER 充分利用 OceanBase 分布式系统的特性，重点优化导入性能和稳定性，以及丰富运行监控信息提升用户体验。
+OBLOADER 是一款使用 Java 语言开发的客户端工具，目前该工具仅适用于 OceanBase 数据库。用户可以将存储介质中的数据库对象的定义文件和表数据文件导入到 OceanBase 数据库中。
+通常我们推荐 OBLOADER 与 OBDUMPER 搭配使用。如果用户希望借助于 OBLOADER 完成数据迁移工作，它也兼容 mysqldump，Mydumper 等客户端工具导出的 CSV 格式的文件。
+
+OBLOADER 专门优化了数据的导入性能，内置多种数据预处理函数，自动容错保证数据导入的稳定性，以及提供较为丰富的监控信息，以便于用户实时观测到数据文件导入的性能和进度。
 
 OBLOADER 主要具备以下功能特性：
 
@@ -26,12 +29,15 @@ OBLOADER 主要具备以下功能特性：
 
 ## 什么是 OBDUMPER 
 
-OBDUMPER 是一款使用 Java 开发的客户端导出工具。可以使用该工具将 OceanBase 数据库中定义的对象和数据导出到文件中。
+OBDUMPER 是一款使用 Java 语言开发的客户端工具，目前该工具仅适用于 OceanBase 数据库。用户可以使用该工具将 OceanBase 数据库中定义的对象和表数据以指定的文件格式导出到存储介质中。
 
-与 MyDumper 和 SQLDeveloper 等导出工具相比，OBDUMPER 具备以下显著优势：
+如果用户希望借助于 OBDUMPER 进行逻辑备份，可以直接将该工具集成到数据库运维系统中。（注：不支持增量备份）与 mysqldump 等客户端导出工具相比，OBDUMPER 具备以下显著的优势：
 
-* 高性能：针对不同的表定义设计多种查询策略，保证最佳的导出性能。
-* 多功能：提供数据预处理、多种类型的数据格式和全局一致性非锁定导出数据等功能。
+- 快速的数据导出能力，设计了多种数据查询策略，大幅提升导出的性能。
+
+- 丰富的数据交换能力，支持将表中数据以多种格式导出到多种存储介质。
+
+- 强大的数据处理能力，导出前对数据进行压缩，加密，脱敏，预处理等。
 
 OBDUMPER 主要具备以下功能特性：
 
