修改 2.oceanbase-loader-dumper.md

--- a/zh-CN/7.reference/7.command-line-tools/2.oceanbase-loader-dumper.md
+++ b/zh-CN/7.reference/7.command-line-tools/2.oceanbase-loader-dumper.md
@@ -11,9 +11,9 @@ OBLOADER 主要具备以下功能特性：
 
 * 支持导入数据库对象定义的语句。 
 
-* 支持从本地磁盘，HDFS, 阿里云OSS 或者 AWS S3 导入对象定义及数据。
+* 支持从本地磁盘，Apache Hadoop, 阿里云OSS 或者 AWS S3 导入对象定义及数据。
 
-* 支持导入 MySQLDump 导出的 SQL-Format 格式的文件。
+* 支持导入 mysqldump 导出的 SQL-Format 格式的文件。
 
 * 支持导入标准的 CSV, Insert SQL, ORC, Parquet 等格式的数据文件。  
 
