--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/261.utl-file-oracle/1.utl-file-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/261.utl-file-oracle/1.utl-file-overview-oracle.md
@@ -81,6 +81,6 @@ UTL_FILE 异常情况
 | [NEW_LINE](9.new-line-utl-oracle.md) | 将一个或多个操作系统指定的行终止符写入文件。            |
 | [GET_LINE](10.get-line-utl-oracle.md) | 读取一行文本。                           |
 | [PUT](11.put-utl-oracle.md)      | 将字符串写入文件。                         |
-| [PUT_LINE](12.put-utl-line-oracle.md) | 将一行写入文件，并附加操作系统指定的行终止符。           |
+| [PUT_LINE](12.put-line-utl-oracle.md) | 将一行写入文件，并附加操作系统指定的行终止符。           |
 
 
