--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/4.format-of-oracle-mode/3.date-and-time-formatting-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/4.format-of-oracle-mode/3.date-and-time-formatting-of-oracle-mode.md
@@ -37,47 +37,47 @@
 
 ### 日期时间格式化元素表
 
-|                                                           元素                                                            | 是否可以用于 TO_\* 函数 |                                                                                           描述                                                                                           |
-|-------------------------------------------------------------------------------------------------------------------------|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| -   /   ， 。 ;   ：  "文字" | 是               | 符号字符串常量。                                                                                                                                                                               |
-| AD  A.D.                                                                                                | 是               | 表示公元纪年法。可以带有或不带有点号。                                                                                                                                                                    |
-| AM A.M.                                                                                                 | 是               | 表示上午。可以带有或不带有点号。                                                                                                                                                                       |
-| BC  B.C.                                                                                                | 是               | 表示公元前的年份。可以带有或不带有点号。                                                                                                                                                                   |
-| CC SCC                                                                                                  | 否               | 表示世纪。                                                                                                                                                                                  |
-| D                                                                                                                       | 是               | 一周的第几（1\~7）天。                                                                                                                                                                          |
-| DAY                                                                                                                     | 是               | 天的名称。结果的长度是固定的，与名称的最长长度的相同。                                                                                                                                                            |
-| DD                                                                                                                      | 是               | 一个月的第几（1\~31）天。                                                                                                                                                                        |
-| DDD                                                                                                                     | 是               | 一年的第几（1\~366）天。                                                                                                                                                                        |
-| DY                                                                                                                      | 是               | 天的名称的缩写。                                                                                                                                                                               |
-| FF \[1..9\]                                                                                                             | 是               | 小数秒。使用数字 1\~9 来指定返回值的小数秒部分的位数，即精度。 默认为日期时间数据类型指定的精度。在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。                                                                                      |
-| HH                                                                                                                      | 是               | 小时（1\~12）。                                                                                                                                                                             |
-| HH12                                                                                                                    | 否               | 小时（1\~12）。12 小时制。                                                                                                                                                                      |
-| HH24                                                                                                                    | 是               | 小时（0\~23）。24 小时制。                                                                                                                                                                      |
-| IW                                                                                                                      | 否               | 一年的第几周（1\~52 或 1\~53），基于 ISO 标准。                                                                                                                                                       |
-| IYY IY I                                                                                | 否               | ISO 年份的后 3、2 或 1 位数字。                                                                                                                                                                  |
-| IYYY                                                                                                                    | 否               | 包含 4 位数字的年份，基于 ISO 标准。                                                                                                                                                                 |
-| J                                                                                                                       | 是               | 儒略日                                                                                                                                                                                    |
-| MI                                                                                                                      | 是               | 分钟（0\~59）。                                                                                                                                                                             |
-| MM                                                                                                                      | 是               | 月（01\~12）。一月份表示为 01，以此类推 。                                                                                                                                                             |
-| MON                                                                                                                     | 是               | 月份的缩写。                                                                                                                                                                                 |
-| MONTH                                                                                                                   | 是               | 月份名称。结果的长度是固定的，与名称的最长长度的相同。                                                                                                                                                            |
-| PM  P.M.                                                                                                | 否               | 表示下午。可以带有或不带有点号。                                                                                                                                                                       |
-| Q                                                                                                                       | 否               | 季度（1、2、3、4）。1月\~3月是第 1 季度，以此类推。                                                                                                                                                        |
-| RR                                                                                                                      | 是               | 年份的后两位， 所在世纪取决于输入的两位以及当前年份处于上半世纪还是下半世纪。 如果现在处于上半世纪，那么输入 0\~49 年时，结果处于当前世纪，输入 50\~99 时结果处于上一世纪。 例如，当前为 2060 年，那么输入 0\~49 年时结果为下一世纪，输入 55\~99 时结果处于当前世纪。 |
-| RRRR                                                                                                                    | 是               | 年份。接受 4 位或 2 位输入。2位时与 RR 相同。                                                                                                                                                           |
-| SS                                                                                                                      | 是               | 秒（0\~59）。                                                                                                                                                                              |
-| SSSSS                                                                                                                   | 是               | 当天的秒数（0\~86400）。                                                                                                                                                                       |
-| TZD                                                                                                                     | 是               | 包含夏令时信息的时区缩写。 例如，PST 表示 US/Pacific 标准时间）; PDT 表示 US/Pacific 夏令时时间）。 在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。                                                                      |
-| TZH                                                                                                                     | 是               | 时区的小时部分。 在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。                                                                                                                                 |
-| TZM                                                                                                                     | 是               | 时区的分钟部分。 在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。                                                                                                                                 |
-| TZR                                                                                                                     | 是               | 时区的区域信息。例如US/Pacific。 在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。                                                                                                                    |
-| WW                                                                                                                      | 否               | 一年的第几（1-53）周。                                                                                                                                                                          |
-| W                                                                                                                       | 否               | 一个月的第几（1\~5）周。                                                                                                                                                                         |
-| X                                                                                                                       | 是               | 本地分隔小数部分的字符。 例如"HH:MI:SSXFF"。                                                                                                                                          |
-| Y,YYY                                                                                                                   | 是               | 带逗号的年份。                                                                                                                                                                                |
-| YEAR SYEAR                                                                                              | 否               | 详细说明的年份。                                                                                                                                                                               |
-| YYYY SYYYY                                                                                              | 是               | 4 位数字的年份。前缀 S 代表用一个负号表示公元前的日期。                                                                                                                                                         |
-| YYY YY Y                                                                                | 是               | 年份的后 3、2 或 1 位数字。                                                                                                                                                                      |
+|                 元素        | 是否可以用于 TO_\* 函数 |                       描述           |
+|-----------------------------|-----------------|-------------------------------------------|
+| -   /   ， 。 ;   ：  "文字" | 是               | 符号字符串常量。 |
+| AD  A.D.                    | 是               | 表示公元纪年法。可以带有或不带有点号。       |
+| AM A.M.                     | 是               | 表示上午。可以带有或不带有点号。           |
+| BC  B.C.                    | 是               | 表示公元前的年份。可以带有或不带有点号。   |
+| CC SCC                      | 否               | 表示世纪。    |
+| D                           | 是               | 一周的第几（1\~7）天。 |
+| DAY                         | 是               | 天的名称。结果的长度是固定的，与名称的最长长度的相同。 |
+| DD                          | 是               | 一个月的第几（1\~31）天。     |
+| DDD                         | 是               | 一年的第几（1\~366）天。    |
+| DY                          | 是               | 天的名称的缩写。|
+| FF \[1..9\]                 | 是               | 小数秒。使用数字 1\~9 来指定返回值的小数秒部分的位数，即精度。 默认为日期时间数据类型指定的精度。在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。 |
+| HH                          | 是               | 小时（1\~12）。|
+| HH12                        | 否               | 小时（1\~12）。12 小时制。   |
+| HH24                        | 是               | 小时（0\~23）。24 小时制。   |
+| IW                          | 否               | 一年的第几周（1\~52 或 1\~53），基于 ISO 标准。   |
+| IYY IY I                    | 否               | ISO 年份的后 3、2 或 1 位数字。   |
+| IYYY                        | 否               | 包含 4 位数字的年份，基于 ISO 标准。       |
+| J                           | 是               | 儒略日   |
+| MI                          | 是               | 分钟（0\~59）。  |
+| MM                          | 是               | 月（01\~12）。一月份表示为 01，以此类推 。    |
+| MON                         | 是               | 月份的缩写。 |
+| MONTH                       | 是               | 月份名称。结果的长度是固定的，与名称的最长长度的相同。  |
+| PM  P.M.                    | 否               | 表示下午。可以带有或不带有点号。     |
+| Q                           | 否               | 季度（1、2、3、4）。1月\~3月是第 1 季度，以此类推。  |
+| RR                          | 是               | 年份的后两位， 所在世纪取决于输入的两位以及当前年份处于上半世纪还是下半世纪。 如果现在处于上半世纪，那么输入 0\~49 年时，结果处于当前世纪，输入 50\~99 时结果处于上一世纪。 例如，当前为 2060 年，那么输入 0\~49 年时结果为下一世纪，输入 55\~99 时结果处于当前世纪。 |
+| RRRR                        | 是               | 年份。接受 4 位或 2 位输入。2位时与 RR 相同。   |
+| SS                          | 是               | 秒（0\~59）。  |
+| SSSSS                       | 是               | 当天的秒数（0\~86400）。    |
+| TZD                         | 是               | 包含夏令时信息的时区缩写。 例如，PST 表示 US/Pacific 标准时间）; PDT 表示 US/Pacific 夏令时时间）。 在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。  |
+| TZH    | 是               | 时区的小时部分。 在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。   |
+| TZM                        | 是               | 时区的分钟部分。 在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。  |
+| TZR                        | 是               | 时区的区域信息。例如US/Pacific。 在时间戳和间隔格式中有效，但在 `DATE` 格式中无效。 |
+| WW                         | 否               | 一年的第几（1-53）周。|
+| W                          | 否               | 一个月的第几（1\~5）周。                  |
+| X                          | 是               | 本地分隔小数部分的字符。 例如"HH:MI:SSXFF"。   |
+| Y,YYY                      | 是               | 带逗号的年份。  |
+| YEAR SYEAR                 | 否               | 详细说明的年份。|
+| YYYY                       | 是               | 4 位数字的年份。当前版本暂不支持公元前的日期。 |
+| YYY YY Y                    | 是               | 年份的后 3、2 或 1 位数字。  |
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
