--- a/zh-CN/7.reference/1.oceanbase-database-concepts/6.data-link/3.database-driver/1.database-driver-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/6.data-link/3.database-driver/1.database-driver-overview.md
@@ -12,7 +12,7 @@ OBCI 驱动是兼容 Oracle 数据库 OCI 接口的 C 语言的驱动。基于 O
 
 JDBC（ Java Database Connectivity ）是 Java 应用程序访问数据库的标准 API（应用程序编程接口），数据库驱动的实现会将 JDBC 标准编程接口转换成对应数据库厂商的 SQL 实现。OceanBase 数据库 JDBC 驱动兼容 JDBC 4.0、4.1、4.2 标准。OceanBase 提供了自研的驱动，使用该驱动可以同时使用 OceanBase 数据库的 MySQL 模式和 Oracle 模式。
 
-有关 OceanBase Connector/J 的详细介绍，请参见 [OceanBase Connector/J](../3.database-driver/3.oceanbase-connector-j.md)。
+有关 OceanBase Connector/J 的详细介绍，请参见 [OceanBase Connector/J](../3.database-driver/3.oceanbase-connector-j_concepts.md)。
 
 ## OceanBase Connector/C
 
