--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -6,7 +6,7 @@ OceanBase 数据库的 Oracle 模式利用 User Profile 实现用户锁定功能
 
 <main id="notice" >
   <h4>功能适用性</h4>
-  <p>本文档仅适用于 OceanBase 数据库 Oracle 模式。目前 OceanBase 数据库社区版仅提供了 MySQL 模式，有关 MySQL 模式下的登录失败处理，参见 <a href="../1.security-permissions-mysql-mode/3.Login-failure-handling-of-mysql-mode.md">登录失败处理</a> 。</p>
+  <p>本文档仅适用于 OceanBase 数据库 Oracle 模式。目前 OceanBase 数据库社区版仅提供了 MySQL 模式，有关 MySQL 模式下的登录失败处理，参见 <a href="../1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md">登录失败处理</a> 。</p>
 </main>
 
 ## 概念介绍
@@ -172,7 +172,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
    <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../2.oracle-3/4.view-user-permissions.md">查看用户权限</a> 和<a href="../2.oracle-3/5.modify-user-permissions-1.md">修改用户权限</a>
+    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md">查看用户权限</a> 和<a href="../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/7.modify-user-permissions-of-oracle-mode.md">修改用户权限</a>
     </main>
 
    ```shell
