--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md
@@ -4,7 +4,7 @@ OceanBase 数据库 Oracle 模式的密码复杂度策略，兼容 Oracle 数据
 
 <main id="notice" >
     <h4>功能适用性</h4>
-    <p>本文档仅适用于 OceanBase 数据库 Oracle 模式。目前 OceanBase 数据库社区版仅提供了 MySQL 模式，有关 MySQL 模式下的密码复杂度，参见 <a href="../1.identification-and-authentication-of-mysql-mode\2.password-complexity-of-mysql-mode.md">密码复杂度</a>。</p>
+    <p>本文档仅适用于 OceanBase 数据库 Oracle 模式。目前 OceanBase 数据库社区版仅提供了 MySQL 模式，有关 MySQL 模式下的密码复杂度，参见 <a href="../1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md">密码复杂度</a>。</p>
 </main>
 
 ## 前提条件
