--- a/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/6.restore-data/7.parameters-of-the-restore.md
+++ b/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/6.restore-data/7.parameters-of-the-restore.md
@@ -30,7 +30,7 @@
 |--------------------|--------------|
 |table_name_list|指定恢复租户中特定表格的数据，其中表名需要包含表所属的数据库|
 | dest_tenant_name   | 指恢复的新租户的名称。 |
-| uri                | 指备份时设置的数据备份路径 `backup_data_dest` 与日志备份路径 `log_archive_dest`, 该值至少包含一条数据备份路径和一条日志归档路径, 路径间用 `,` 分隔。    |
+| uri                | 指备份时设置的数据备份路径 `backup_data_dest` 与日志归档路径 `log_archive_dest`, 该值至少包含一条数据备份路径和一条日志归档路径, 路径间用 `,` 分隔。    |
 | timestamp          | 指恢复指定时间戳, 恢复到该时间点为止, 但不包括该 `timestamp` 位点。|
 | scn                | 指恢复指定的 SCN, 恢复到该 SCN 位点为止, 但不包括该 `scn` 位点。|
 | restore_option     | 支持 `pool_list`、`locality`、`primary_zone`、`kms_encrypt`, 不同参数间采用 `&` 分隔： <ul><li>`pool_list`为必选项，填写用户的资源池。</li>  <li>`locality` 为可选项，填写新租户副本分布的 Locality 信息，需要满足与新租户所在集群的 `pool_list` 的 Zone 信息相匹配。 不填时，默认按照 resource_pool 的 `zone_list` 为每个 Zone 设一个 F 副本。</br>填写样例: `locality='F@z1,F@z2,F@z3'` <li> `primary_zone` 为可选项，填写新租户的 Leader 副本的偏好位置，需要满足与  `pool_list` 及`locality` 的匹配，即需要满足 Zone 信息匹配以及 `primary_region` 内至少有两个 Paxos 成员等限制。不填时，则系统按照 `locality` 的 `zone_list` 将 Leader 随机分布在这些 Zone 中。 </br>填写样例: `primary_zone='z1'`</li> <li>`kms_encrypt`为可选项，为 `true` 则表示在恢复时需要使用在恢复准备操作中指定的 `kms_encrypt_info`, 默认缺省值为 `false`。 </li></ul>   |
@@ -46,7 +46,7 @@
 
 * 发起了 3 次数据备份，有效数据备份分别为 `full_backup_set_1`、 `full_backup_set_2`、`inc_backup_set_3`。
 
-物理恢复的可恢复区间如下图所示。其中，数据备份的右边界均为 `MIN_RESTORE_SCN`（例如，数据备份 `full_backup_set_1` 的 `MIN_RESTORE_SCN` 对应图中的 `scn 300`）；日志归档的右边界均为 `CHECKPOINT_SCN`（例如，日志备份 `round 1` 的 `CHECKPOINT_SCN` 对应图中的 `scn 500`）。
+物理恢复的可恢复区间如下图所示。其中，数据备份的右边界均为 `MIN_RESTORE_SCN`（例如，数据备份 `full_backup_set_1` 的 `MIN_RESTORE_SCN` 对应图中的 `scn 300`）；日志归档的右边界均为 `CHECKPOINT_SCN`（例如，日志归档 `round 1` 的 `CHECKPOINT_SCN` 对应图中的 `scn 500`）。
 
 ![可恢复区间](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/backup-and-restore/restore-window.jpg)
 
