--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -98,4 +98,4 @@
 | 主备租户系统变量修改是否同步     | 主租户修改系统变量后，备租户的系统变量会同步修改       |
 | 备租户操作                     | <ul><li>备租户支持强读或弱读，不支持写</li><li>备租户只能触发转储，不能触发合并，合并信息从主租户同步</li></ul>|
 | Switchover 限制                | <ul><li>备切主要求所有 Server 在线</li><li>备切主在切换前需要保证备租户已同步</li></ul>                        |
-| Failover 限制                  | 要求所有 Server 在线                                    |
+| Failover 限制                  | 要求备租户所在集群的所有 Server 在线                                    |
