--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md
@@ -60,7 +60,7 @@
      命令执行成功后，在本示例中，仅 `mysql_tenant` 租户会进入归档模式。可以在 `sys` 租户下的 `oceanbase.DBA_OB_TENANTS` 视图中查看集群中所有租户的归档模式。
 
      ```shell
-     obclient [(none)]> SELECT TENANT_NAME, LOG_MODE oceanbase.FROM DBA_OB_TENANTS WHERE TENANT_TYPE = 'USER'\G
+     obclient [(none)]> SELECT TENANT_NAME, LOG_MODE FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_TYPE = 'USER'\G
      *************************** 1. row ***************************
      TENANT_NAME: mysql_tenant
         LOG_MODE: ARCHIVELOG
