--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -42,6 +42,11 @@
     obclient [oceanbase]> SET ob_query_timeout = 20000000;
     Query OK, 0 rows affected
     ```
+	
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>Oracle 模式还可以通过 <code>ALTER SYSTEM SESSION SET ob_query_timeout = 20000000;</code> 语句修改 Session 级别的变量值。</p>
+   </main>
 
 4. 查看修改结果。
 
@@ -83,6 +88,11 @@
     obclient [oceanbase]> SET GLOBAL ob_query_timeout = 20000000;
     Query OK, 0 rows affected
     ```
+
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>Oracle 模式还可以通过 <code>ALTER SYSTEM SET ob_query_timeout = 20000000;</code> 语句修改 Global 级别的变量值。</P>
+   </main>
 
 4. 查看修改结果。
 
