--- a/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
+++ b/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
@@ -1,6 +1,6 @@
 # OceanBase 数据库社区版 V4.1.0
 
-## V4.1.0
+## V4.1.0 Beta
 
 ### 版本信息
 
@@ -9,7 +9,7 @@
 
 ### 版本定位
 
-OceanBase 数据库 V4.0 社区版本是对分布式数据库系统架构设计的全面升级，OceanBase 数据库 V4.1 版本面向公有云&开源用户场景需求，在对功能健全优化的同时，不断对产品进行打磨和完善，在对 MySQL 8.0 兼容、性能、易用性、成本方面进行优化增强，目标支持项目规模化复制，是真正可全面商业化推广的版本。
+OceanBase 数据库 V4.0 社区版本是对分布式数据库系统架构设计的全面升级，OceanBase 数据库 V4.1 版本面向公有云或开源用户场景需求，在对功能健全优化的同时，不断对产品进行打磨和完善，在对 MySQL 8.0 兼容、性能、易用性、成本方面进行优化增强，目标支持项目规模化复制，是真正可全面商业化推广的版本。
 
 本版本的核心能力特性如下：
 
@@ -611,6 +611,31 @@ OceanBase 数据库 V4.1.0 推荐使用的平台工具版本如下。
 * OceanBase 数据库 V4.1.0 支持从 V4.0 版本在线升级到 V4.1 版本，OBD 暂未适配完成，后续版本会补齐该能力。
 * OceanBase 数据库 V4.1.0 版本 `DROP DATABASE` 操作一次删除数据库内的表的个数超过 200 个时存在删除失败的风险，建议业务先 `DROP TABLE` 后再执行 `DROP DATABASE` 操作，后续 V4.2 版本将修复该问题。  
 
+## V4.1.0
+
+### 版本信息
+
+* 发布时间：2023 年 4 月 20 日
+* 版本号：V4.1.0
+
+### 发版目的
+
+本次发版主要是 BUG 修复，提升版本稳定性。
+
+### 缺陷修复
+
+* 修复存在多个空 Tablet 时出现备份失败问题。
+* 修复操作系统页面大小为 64k 场景下可能触及的爆栈问题。
+* 修复从 V4.0.0 升级到 V4.1.0 后，Lob 数据长度读取失败问题。
+* 修复 500 租户 ModulePageAlloc 模块占用过高导致内存爆问题。
+* 修复 COM_PING 响应逻辑里，没有更新 Session Active 时间导致断连问题。
+* 修复 `CDB_OB_BACKUP_SET_FILES` 视图中 `OUTPUT_BYTES` 字段统计不准确问题。
+
+### 注意事项
+
+* OBD V2.0.0 不支持 OceanBase 数据库社区版 V4.0.0 升级到 OceanBase 数据库社区版 V4.1.0。
+* OCP 社区版 V4.0.3 开始支持从 OceanBase 数据库社区版 V4.0.0 升级到 OceanBase 数据库社区版 V4.1.0。
+
 ## V4.1.0 BP1
 
 ### 版本信息
@@ -624,7 +649,7 @@ OceanBase 数据库 V4.1.0 推荐使用的平台工具版本如下。
 
 ### 缺陷修复
 
-* 修复 REGEXP BINARY 错误码兼容性问题。
+* 修复 REGEXP BINARY 返回错误码与 MySQL 不兼容问题。
 * 修复 In Expr 优化导致的 SQL 执行结果集重复问题。
 * 修复 k8s 部署集群，因为虚拟网卡太多导致启动失败问题。
 * 修复生成列添加索引后，通过索引访问表，生成执行计划不符合预期问题。
@@ -634,4 +659,4 @@ OceanBase 数据库 V4.1.0 推荐使用的平台工具版本如下。
 
 ### 注意事项
 
-OBD V2.1.0 版本开始支持将 OceanBase 数据库从 V4.0.0 版本升级至 V4.1.0 版本。
+OBD V2.1.0 版本开始支持将 OceanBase 数据库社区版从 V4.0.0 版本升级至 V4.1.0 版本。
